crates/credential/tests/probes/scheme_guard_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
  --> tests/probes/scheme_guard_send.rs:17:18
   |
17 |     require_send(g);
   |     ------------ ^ `*const ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `SchemeGuard<'_, ApiKeyCredential>`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `SchemeGuard<'_, ApiKeyCredential>`
  --> src/secrets/scheme_guard.rs
   |
   | pub struct SchemeGuard<'a, C: Credential> {
   |            ^^^^^^^^^^^
note: required by a bound in `require_send`
  --> tests/probes/scheme_guard_send.rs:11:20
   |
11 | fn require_send<T: Send>(_: T) {}
   |                    ^^^^ required by this bound in `require_send`
